// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly default prop 1`] = `
<View>
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFF",
            "borderRadius": 2,
            "borderWidth": 1,
            "flexDirection": "row",
          },
          false,
          Object {
            "borderColor": undefined,
          },
          Object {
            "marginBottom": 7.857142857142857,
            "marginLeft": 7.857142857142857,
            "marginRight": 7.857142857142857,
            "marginTop": 7.857142857142857,
            "width": undefined,
          },
        ]
      }
    >
      <TextInput
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder="placeholder"
        placeholderTextColor="#D7D7D7"
        style={
          Object {
            "color": "#000",
            "flex": 1,
            "height": 58.971428571428575,
            "paddingLeft": 18.428571428571427,
            "textAlign": "left",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 7.857142857142857,
        "marginRight": 7.857142857142857,
      }
    }
  />
</View>
`;

exports[`renders correctly with default & margingTop prop 1`] = `
<View>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#D7D7D7",
          "borderRadius": 2,
          "flexDirection": "row",
          "marginBottom": 7.857142857142857,
          "marginLeft": 7.857142857142857,
          "marginRight": 7.857142857142857,
          "marginTop": 15.714285714285714,
          "width": undefined,
        }
      }
    >
      <TextInput
        editable={false}
        placeholder="placeholder"
        placeholderTextColor="#D7D7D7"
        style={
          Object {
            "flex": 1,
            "height": 58.971428571428575,
            "paddingLeft": 18.428571428571427,
            "textAlign": "left",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 7.857142857142857,
        "marginRight": 7.857142857142857,
      }
    }
  />
</View>
`;

exports[`renders correctly with default & margingTop prop 2`] = `
<View>
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFF",
            "borderRadius": 2,
            "borderWidth": 1,
            "flexDirection": "row",
          },
          false,
          Object {
            "borderColor": "#B00020",
          },
          Object {
            "marginBottom": 7.857142857142857,
            "marginLeft": 7.857142857142857,
            "marginRight": 7.857142857142857,
            "marginTop": 15.714285714285714,
            "width": undefined,
          },
        ]
      }
    >
      <TextInput
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder="Placeholder"
        placeholderTextColor="#D7D7D7"
        style={
          Object {
            "color": "#000",
            "flex": 1,
            "height": 58.971428571428575,
            "paddingLeft": 18.428571428571427,
            "textAlign": "left",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 7.857142857142857,
        "marginRight": 7.857142857142857,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Mulish-Regular",
            "fontSize": 17.2,
            "fontWeight": "normal",
          },
          Object {
            "color": "#B00020",
          },
          Object {
            "textAlign": "left",
          },
          undefined,
        ]
      }
      theme={
        Object {
          "colors": Object {
            "background": "#FFF",
            "backgroundLayout": "rgba(0, 0, 0, 0.8)",
            "black": "#000",
            "error": "#B00020",
            "greyOpac10": "rgba(53, 53, 53, 0.1)",
            "greyOpac50": "rgba(53, 53, 53, 0.5)",
            "lightgrey": "#D7D7D7",
            "linkColor": "#0000EE",
            "primary": "#FAD000",
            "primaryVariant": "#3700B3",
            "secondary": "#03DAC6",
            "secondaryVariant": "#018786",
            "shadowColor": "#222",
            "textColor": "#000",
            "transparent": "transparent",
            "white": "#FFF",
          },
          "dark": false,
        }
      }
    >
      Error text
    </Text>
  </View>
</View>
`;

exports[`renders correctly with isPassword & secureTextEntry prop 1`] = `
<View>
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFF",
            "borderRadius": 2,
            "borderWidth": 1,
            "flexDirection": "row",
          },
          false,
          Object {
            "borderColor": undefined,
          },
          Object {
            "marginBottom": 7.857142857142857,
            "marginLeft": 7.857142857142857,
            "marginRight": 7.857142857142857,
            "marginTop": 7.857142857142857,
            "width": undefined,
          },
        ]
      }
    >
      <TextInput
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder="Placeholder"
        placeholderTextColor="#D7D7D7"
        secureTextEntry={true}
        style={
          Object {
            "color": "#000",
            "flex": 1,
            "height": 58.971428571428575,
            "paddingLeft": 18.428571428571427,
            "textAlign": "left",
          }
        }
      />
      <View
        style={
          Object {
            "paddingLeft": 6.142857142857142,
            "paddingRight": 18.428571428571427,
          }
        }
      >
        <SvgMock
          height={20}
          name="hidepassword"
          onPress={[Function]}
          width={20}
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 7.857142857142857,
        "marginRight": 7.857142857142857,
      }
    }
  />
</View>
`;

exports[`renders correctly with mask & value  prop 1`] = `
<View>
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFF",
            "borderRadius": 2,
            "borderWidth": 1,
            "flexDirection": "row",
          },
          false,
          Object {
            "borderColor": undefined,
          },
          Object {
            "marginBottom": 7.857142857142857,
            "marginLeft": 7.857142857142857,
            "marginRight": 7.857142857142857,
            "marginTop": 7.857142857142857,
            "width": undefined,
          },
        ]
      }
    >
      <TextInput
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        style={
          Object {
            "color": "#000",
            "flex": 1,
            "height": 58.971428571428575,
            "paddingLeft": 18.428571428571427,
            "textAlign": "left",
          }
        }
        value=""
      />
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 7.857142857142857,
        "marginRight": 7.857142857142857,
      }
    }
  />
</View>
`;

exports[`renders correctly with mask & value & errorText  prop 1`] = `
<View>
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFF",
            "borderRadius": 2,
            "borderWidth": 1,
            "flexDirection": "row",
          },
          false,
          Object {
            "borderColor": "#B00020",
          },
          Object {
            "marginBottom": 7.857142857142857,
            "marginLeft": 7.857142857142857,
            "marginRight": 7.857142857142857,
            "marginTop": 7.857142857142857,
            "width": undefined,
          },
        ]
      }
    >
      <TextInput
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        style={
          Object {
            "color": "#000",
            "flex": 1,
            "height": 58.971428571428575,
            "paddingLeft": 18.428571428571427,
            "textAlign": "left",
          }
        }
        value=""
      />
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 7.857142857142857,
        "marginRight": 7.857142857142857,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Mulish-Regular",
            "fontSize": 17.2,
            "fontWeight": "normal",
          },
          Object {
            "color": "#B00020",
          },
          Object {
            "textAlign": "left",
          },
          undefined,
        ]
      }
      theme={
        Object {
          "colors": Object {
            "background": "#FFF",
            "backgroundLayout": "rgba(0, 0, 0, 0.8)",
            "black": "#000",
            "error": "#B00020",
            "greyOpac10": "rgba(53, 53, 53, 0.1)",
            "greyOpac50": "rgba(53, 53, 53, 0.5)",
            "lightgrey": "#D7D7D7",
            "linkColor": "#0000EE",
            "primary": "#FAD000",
            "primaryVariant": "#3700B3",
            "secondary": "#03DAC6",
            "secondaryVariant": "#018786",
            "shadowColor": "#222",
            "textColor": "#000",
            "transparent": "transparent",
            "white": "#FFF",
          },
          "dark": false,
        }
      }
    >
      Error Text
    </Text>
  </View>
</View>
`;

exports[`renders correctly with rightIcon & iconHeight & iconWidth & borderColor & keyboardType prop 1`] = `
<View>
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFF",
            "borderRadius": 2,
            "borderWidth": 1,
            "flexDirection": "row",
          },
          false,
          Object {
            "borderColor": "#007BC1",
          },
          Object {
            "marginBottom": 7.857142857142857,
            "marginLeft": 7.857142857142857,
            "marginRight": 7.857142857142857,
            "marginTop": 7.857142857142857,
            "width": undefined,
          },
        ]
      }
    >
      <TextInput
        keyboardType="name-phone-pad"
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder="Placeholder"
        placeholderTextColor="#D7D7D7"
        style={
          Object {
            "color": "#000",
            "flex": 1,
            "height": 58.971428571428575,
            "paddingLeft": 18.428571428571427,
            "textAlign": "left",
          }
        }
      />
      <View
        style={
          Object {
            "paddingLeft": 6.142857142857142,
            "paddingRight": 18.428571428571427,
          }
        }
      >
        <SvgMock
          height={55}
          name="gifticon"
          width={55}
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 7.857142857142857,
        "marginRight": 7.857142857142857,
      }
    }
  />
</View>
`;
